--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,12 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.Flex-main {
+  display: flex;
+  gap: 54px;
+}
 .App-header {
-  background-color: #282c34;
+  background-color: #003169;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,6 +27,83 @@
   color: white;
 }
 
+.Image-music {
+  width: 250px;
+  height: 250px;
+  border-radius: 20px;
+}
+.Flex-content {
+  display: flex;
+  justify-content: space-between;
+}
+.Image-music-small {
+  width: 118px;
+  height: 118px;
+  border-radius: 20px;
+}
+.Music-name {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 28px;
+  margin-top: 24px;
+  text-align: left;
+}
+.Player {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
+.Line {
+  margin-top: 17px;
+  width: 100%;
+  height: 10px;
+  background: #a4a4a4;
+  border-radius: 20px;
+}
+.Bar {
+  width: 80%;
+  height: 10px;
+  background: #ffffff;
+  border-radius: 20px;
+  justify-self: left;
+}
+.Singer-name {
+  margin: 0px;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 19px;
+  text-align: left;
+  color: rgba(255, 255, 255, 0.8);
+}
+.Music-information {
+  padding-bottom: 16px;
+}
+.Screen-mobile-notification {
+  background-color: #227be5;
+  width: 330px;
+  border-radius: 20px;
+  padding: 35px 30px;
+  margin-bottom: 21px;
+}
+.Screen-mobile {
+  background-color: #227be5;
+  width: 250px;
+  border-radius: 20px;
+  padding: 55px 65px;
+  height: fit-content;
+}
+.Flex-Time {
+  display: flex;
+  justify-content: space-between;
+}
+.Music-Time {
+  font-weight: 600;
+  font-size: 16px;
+  color: #ffffff;
+  margin: 0;
+}
 .App-link {
   color: #61dafb;
 }
